# claudeStreamDeck

./: .gitignore  CLAUDE.md  README.md  ghostty-focus-plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: correlation-rationale.md  next-steps.md  setup.md  tier0-validation-findings.md
gsm/: __init__.py  applescript.py  cli.py  manager.py  registry.py
hooks/: settings.snippet.json
milestones/: M1-hardware-smoke-test.md  M2-daemon-skeleton.md  M3-claude-code-hooks.md  M4-focus-by-uuid.md  M5-polish.md  ghostty-fork-plan-prompt.md
scripts/: m1_smoke.py
service/: com.claudestreamdeck.streamdeckd.plist
streamdeckd/: __init__.py  animation.py  cli.py  daemon.py  hook.py  protocol.py  renderer.py  state.py  streamdeck_renderer.py
tests/: conftest.py  fakes.py  test_animation.py  test_applescript.py  test_cli_gsm.py  test_cli_streamdeckd.py  test_daemon.py  test_hook.py  test_manager.py  test_protocol.py  test_registry.py  test_renderer.py  test_service.py  test_state.py  test_streamdeck_renderer.py
